tests/fail/mutable_method_call.stderr
tests/fail/mutable_method_call.tk:13:6: error[E0443]: Cannot modify immutable entity 'Method 'set' requires explicit mutable argument (use '#')'
